Every other function has been added

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <button class="button">ln</button>
             <button class="button">log</button>
             <button class="button">%</button>
-            <button class="button">√</button>
+            <button class="button">sqrt</button>
             <button class="button">cube</button>
             <button class="button">sqr</button>
             <button class="button">(</button>
