--- a/index.html
+++ b/index.html
@@ -50,12 +50,7 @@
     </div>
     <p>
         <h2>Important</h2>
-        <li>To solve 'sin' first write the number and then click the button.</li>
-        <li>To solve 'cos' first write the number and then click the button.</li>
-        <li>To solve 'tan' first write the number and then click the button.</li>
-        <li>To solve 'sqrt' first write the number and then click the button.</li>
-        <li>To solve 'sqr' first write the number and then click the button.</li>
-        <li>To solve 'cube' first write the number and then click the button.</li>
+        <li>To solve <span>" sin , cos , tan , sqrt , cube , log , ln , π , sqr , e "</span> first write the number and then click the button.</li>
     </p>
 
     <script src="app.js"></script>
